--- a/index.html
+++ b/index.html
@@ -12,102 +12,112 @@
     <title>WebStudio</title>
 </head>
 <body>
+    <div class="conteiner">
     <!--HEADER-->
     <header>
         <div class="cont-head">
-            <nav class="navigation">
-                <a href="./index.html" class="logo">
+                <nav class="navigation">
+                    <a href="./index.html" class="logo">
+                        <span class="spanlogo">Web</span>Studio
+                    </a>
+                    <ul class="navigation-list list">
+                        <li class="navigation-item"><a href="./index.html " class="links link">Студия</a></li>
+                        <li class="navigation-item"><a href="./portfolio.html" class="links">Портфолио</a></li>
+                        <li class="navigation-item"><a href="./index.html" class="links">Контакты</a></li>
+                    </ul>
+                </nav>
+                    <ul class="link-list list">
+                        <li class="item"><a href="mailto:info@devstudio.com"  class="con-link links">info@devstudio.com</a></li>
+                        <li class="item"><a href="tel:+380961111111" class="con-link links">+38 096 111 11 11</a></li>
+                    </ul>
+            </div>
+        </header>
+    </div>
+        <main>        
+            <!--HERO-->
+            <section class="hero">
+                    <h1 class="hero-title title">Эффективные решения<br> для вашего бизнеса</h1>
+                    
+                    <button type="button" class="hero-btn">Заказать услугу</button>
+            </section>       
+            <!--RULES-->
+            <section class="rules">
+                <div class="conteiner">
+                    <h2>Правила ведення бызнесу</h2>
+                    <ul class="rules-list list">
+                        <li>
+                            <h3 class="rules-title title">Внимание к деталям</h3>
+                                <p class="rules-about">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                        </li>
+                        <li>
+                            <h3 class="rules-title title">Пунктуальность</h3>
+                                <p class="rules-about">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                        </li>
+                        <li>
+                            <h3 class="rules-title title">Планирование</h3>
+                                <p class="rules-about"> Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                        </li>
+                        <li>
+                            <h3 class="rules-title title">Современные технологии</h3>
+                                <p class="rules-about">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <!--WHAT WE DO-->
+            <section class="what-we-do">
+                <div class="conteiner">
+                    <h2 class="what-title title">Чем мы занимаемся</h2>
+                    <ul class="what-list list">
+                        <li><img src="./img/komp.jpg" alt="компютер" width="370" class="what-img"></li>
+                        <li><img src="./img/tel.jpg" alt="телефон" width="370" class="what-img"></li>
+                        <li><img src="./img/tablet.jpg" alt="планшет" width="370" class="what-img"></li>
+                    </ul>
+                </div>
+            </section>
+            <!--OUR TEAM--> 
+            <section class="our-team">
+                <div class="conteiner">
+                    <h2 class="our-team-title title">Наша команда</h2>
+                    <ul class="our-team-list list">
+                        <li class="our-team-intem">
+                            <img src="./img/igor.jpg" alt="фото Игор Демьяненко" width="270" height="260" class="foto">
+                            <h3 class="our-team-name title">Игорь Демьяненко</h3>
+                            <p class="our-team-work">Product Designer</p>
+                        </li>
+                        <li class="our-team-intem">
+                            <img src="./img/olga.jpg" alt="фото Ольга Репина" width="270" height="260" class="foto">
+                            <h3 class="our-team-name title">Ольга Репина</h3>
+                            <p class="our-team-work">Frontend Developer</p>
+                        </li>
+                        <li class="our-team-intem">
+                            <img src="./img/nikolaj.jpg" alt="фото Николай Тарасов" width="270" height="260" class="foto">
+                            <h3 class="our-team-name title">Николай Тарасов</h3>
+                            <p class="our-team-work">Marketing</p>
+                        </li>
+                        <li class="our-team-intem">
+                            <img src="./img/mihail.jpg" alt="фото Михаил Ермаков" width="270" height="260" class="foto">
+                            <h3 class="our-team-name title">Михаил Ермаков</h3>
+                            <p class="our-team-work">UI Designer</p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+        </main>
+        <!--подвал-->
+        <footer class="basement">
+            <div class="conteiner">
+                <a href="/" class="logo basement-logo">
                     <span class="spanlogo">Web</span>Studio
                 </a>
-                <ul class="navigation-list list">
-                    <li class="navigation-item"><a href="./index.html " class="links link">Студия</a></li>
-                    <li class="navigation-item"><a href="./portfolio.html" class="links">Портфолио</a></li>
-                    <li class="navigation-item"><a href="./index.html" class="links">Контакты</a></li>
-                </ul>
-            </nav>
-                <ul class="link-list list">
-                    <li class="item"><a href="mailto:info@devstudio.com"  class="con-link links">info@devstudio.com</a></li>
-                    <li class="item"><a href="tel:+380961111111" class="con-link links">+38 096 111 11 11</a></li>
-                </ul>
-        </div>
-    </header>
-    <main>
-        <!--HERO-->
-        <section class="hero">
-                <h1 class="hero-title title">Эффективные решения<br> для вашего бизнеса</h1>
-                
-                <button type="button" class="hero-btn">Заказать услугу</button>
-        </section>
-        <!--RULES-->
-        <section class="rules">
-            <h2>Правила ведення бызнесу</h2>
-            <ul class="rules-list list">
-                <li>
-                    <h3 class="rules-title title">Внимание к деталям</h3>
-                        <p class="rules-about">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                </li>
-                <li>
-                    <h3 class="rules-title title">Пунктуальность</h3>
-                        <p class="rules-about">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                </li>
-                <li>
-                    <h3 class="rules-title title">Планирование</h3>
-                        <p class="rules-about"> Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                </li>
-                <li>
-                    <h3 class="rules-title title">Современные технологии</h3>
-                        <p class="rules-about">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
-            </ul>
-        </section>
-        <!--WHAT WE DO-->
-        <section class="what-we-do">
-            <h2 class="what-title title">Чем мы занимаемся</h2>
-            <ul class="what-list list">
-                <li><img src="./img/komp.jpg" alt="компютер" width="370" class="what-img"></li>
-                <li><img src="./img/tel.jpg" alt="телефон" width="370" class="what-img"></li>
-                <li><img src="./img/tablet.jpg" alt="планшет" width="370" class="what-img"></li>
-            </ul>
-        </section>
-        <!--OUR TEAM-->
-        <section class="our-team">
-            <h2 class="our-team-title title">Наша команда</h2>
-            <ul class="our-team-list list">
-                <li class="our-team-intem">
-                    <img src="./img/igor.jpg" alt="фото Игор Демьяненко" width="270" height="260">
-                    <h3 class="our-team-name title">Игорь Демьяненко</h3>
-                    <p class="our-team-work">Product Designer</p>
-                </li>
-                <li class="our-team-intem">
-                    <img src="./img/olga.jpg" alt="фото Ольга Репина" width="270" height="260">
-                    <h3 class="our-team-name title">Ольга Репина</h3>
-                    <p class="our-team-work">Frontend Developer</p>
-                </li>
-                <li class="our-team-intem">
-                    <img src="./img/nikolaj.jpg" alt="фото Николай Тарасов" width="270" height="260">
-                    <h3 class="our-team-name title">Николай Тарасов</h3>
-                    <p class="our-team-work">Marketing</p>
-                </li>
-                <li class="our-team-intem">
-                    <img src="./img/mihail.jpg" alt="фото Михаил Ермаков" width="270" height="260">
-                    <h3 class="our-team-name title">Михаил Ермаков</h3>
-                    <p class="our-team-work">UI Designer</p>
-                </li>
-            </ul>
-        </section>
-    </main>
-    <!--подвал-->
-    <footer class="basement">
-        <a href="/" class="logo basement-logo">
-            <span class="spanlogo">Web</span>Studio
-        </a>
-        <address class="ft-adres">
-            <p class="adres">г. Киев, пр-т Леси Украинки, 26</p>
-            <ul class="list">
-                <li><a href="mailto:info@devstudio.com" class="links foot-link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="links foot-link">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
-    </footer>
+                <address class="ft-adres">
+                    <p class="adres">г. Киев, пр-т Леси Украинки, 26</p>
+                    <ul class="list">
+                        <li><a href="mailto:info@devstudio.com" class="links foot-link mail">info@devstudio.com</a></li>
+                        <li><a href="tel:+380961111111" class="links foot-link">+38 096 111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
+        </footer>
 </body>
 </html>
