--- a/portfolio.html
+++ b/portfolio.html
@@ -120,7 +120,7 @@
                             </a>
                         </li>
                         <li class="gallery-item">
-                            <a href="/" class="gallery-link"><img src="./img/lab.jpg" alt="етикетка" width="370" height="294" class="poster">
+                            <a href="/" class="galery-link"><img src="./img/lab.jpg" alt="етикетка" width="370" height="294" class="poster">
                                     <div class="gallery-box">
                                         <h3 class="gallery-title title">Проект <span lang="en">LAB</span></h3>
                                         <p class="gallery-about">Маркетинг</p>
