--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <!--RULES-->
         <section class="rules">
                     <div class="conteiner">
-                        <h2>Правила ведення бызнесу</h2>
+                        <h2 class="visually-hidden">Правила ведення бызнесу</h2>
                         <ul class="rules-list list">
                             <li class="rules-item">
                                 <h3 class="rules-title title">Внимание к деталям</h3>
@@ -112,8 +112,8 @@
         </section>
     </main>
         <!--подвал-->
-    <footer class="basement">
-            <div class="conteiner">
+    <footer>
+            <div class="conteiner basement">
                 <a href="/" class="logo basement-logo">
                     <span class="spanlogo">Web</span>Studio
                 </a>
