--- a/portfolio.html
+++ b/portfolio.html
@@ -36,8 +36,8 @@
             <!--PORTFOLIO-->
             <section class="filters">
                 <div class="conteiner">
-                    <h1>Портфолио</h1>
-                    <h2>Фільтри</h2>
+                    <h1 class="visually-hidden">Портфолио</h1>
+                    <h2 class="visually-hidden">Фільтри</h2>
                     <ul class="filters-list list">
                         <li class="filters-item">
                             <button type="button" class="filters-btn">Все</button>
@@ -140,8 +140,8 @@
                 </div>
             </section>
         </main>
-        <footer class="basement">
-            <div class="conteiner">
+        <footer>
+            <div class="conteiner basement">
                 <a href="/" class="logo basement-logo">
                     <span class="spanlogo">Web</span>Studio
                 </a>
