--- a/index.html
+++ b/index.html
@@ -112,15 +112,15 @@
         </section>
     </main>
         <!--подвал-->
-    <footer>
-            <div class="conteiner basement">
+    <footer class="basement">
+            <div class="conteiner">
                 <a href="/" class="logo basement-logo">
                     <span class="spanlogo">Web</span>Studio
                 </a>
                 <address class="ft-adres">
                     <p class="adres">г. Киев, пр-т Леси Украинки, 26</p>
                     <ul class="list">
-                        <li><a href="mailto:info@devstudio.com" class="links foot-link mail">info@devstudio.com</a></li>
+                        <li class="ft-item"><a href="mailto:info@devstudio.com" class="links foot-link mail">info@devstudio.com</a></li>
                         <li><a href="tel:+380961111111" class="links foot-link">+38 096 111 11 11</a></li>
                     </ul>
                 </address>
